Made changes to site

--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,90 @@
 @font-face {
-    font-family: "KawaiiBubble-Regular";
-    src: url(fonts/KawaiiBubble-Regular.ttf);
+    font-family: "LTCBroadway";
+    src: url(fonts/LTCBroadway.ttf);
 }
 
-.center-image-container{
+.boxing-logo-container{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
 }
 
+
+body {
+    color:#0055BF
+}
 
 .center-link-text{
-    font-family: "KawaiiBubble-Regular", sans-serif;
+    font-family: "LTCBroadway", sans-serif;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
 }
 
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+}
 
 .center-link-text :hover{
     color: rgb(255, 0, 0);
 
 }
+
+#backgroundScreen1 {
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("/Images/Background1.jpg");
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position: center;
+}
+
+.startButton {
+    background-color: #272727; /* Dark Grey */
+    font-family: "LTCBroadway", sans-serif;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 63px;
+    border-radius: 12px;
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
+  
+  .startButton :hover {
+    color: #7d7d7d;
+  }
+
+
+  .modeHover {
+
+  }
+
+  .modeHover :hover {
+    border: 5px solid #ffffff;
+  }
+
+  .flashing-sign-1 {
+    position:absolute;
+    left: 180;
+    top: 50;
+  }
+
+  .boxing-characters-fighting {
+  position: fixed;
+  left: 500
+
+  }
