--- a/styles.css
+++ b/styles.css
@@ -3,38 +3,7 @@
     src: url(fonts/LTCBroadway.ttf);
 }
 
-.boxing-logo-container{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
 
-
-body {
-    color:#0055BF
-}
-
-.center-link-text{
-    font-family: "LTCBroadway", sans-serif;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-.center{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-
-}
-
-.center-link-text :hover{
-    color: rgb(255, 0, 0);
-
-}
 
 #backgroundScreen1 {
   position: fixed;
@@ -43,7 +12,20 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url("/Images/Background1.jpg");
+    background-image: url("/Images/MenuBackground.jpg");
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position: center;
+}
+
+#backgroundScreen2 {
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("/Images/SelectBackground.jpg");
     background-repeat:no-repeat;
     background-size:contain;
     background-position: center;
@@ -52,6 +34,7 @@ body {
 .startButton {
     background-color: #272727; /* Dark Grey */
     font-family: "LTCBroadway", sans-serif;
+    position: absolute;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -63,28 +46,9 @@ body {
     transition-duration: 0.3s;
     cursor: pointer;
   }
-  
-  .startButton :hover {
-    color: #7d7d7d;
-  }
-
-
-  .modeHover {
-
-  }
-
-  .modeHover :hover {
-    border: 5px solid #ffffff;
-  }
 
   .flashing-sign-1 {
-    position:absolute;
-    left: 180;
+    position:fixed;
+    left: 1500;
     top: 50;
-  }
-
-  .boxing-characters-fighting {
-  position: fixed;
-  left: 500
-
   }
