--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,117 @@
-@font-face {
-    font-family: "LTCBroadway";
-    src: url(fonts/LTCBroadway.ttf);
+* {
+  box-sizing: border-box;
 }
 
-
+@font-face {
+  font-family: "LTCBroadway";
+  src: url(fonts/LTCBroadway.ttf);
+}
 
 #backgroundScreen1 {
   position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("/Images/MenuBackground.jpg");
-    background-repeat:no-repeat;
-    background-size:contain;
-    background-position: center;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("/Images/MenuBackground.jpg");
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
 }
 
 #backgroundScreen2 {
   position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("/Images/SelectBackground.jpg");
-    background-repeat:no-repeat;
-    background-size:contain;
-    background-position: center;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("/Images/SelectBackground.jpg");
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
 }
 
-.startButton {
-    background-color: #272727; /* Dark Grey */
-    font-family: "LTCBroadway", sans-serif;
-    position: absolute;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 63px;
-    border-radius: 12px;
-    transition-duration: 0.3s;
-    cursor: pointer;
-  }
+.button {
+  background-color: #272727;
+  font-family: "LTCBroadway", sans-serif;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 63px;
+  border-radius: 12px;
+  transition-duration: 0.3s;
+  cursor: pointer;
+}
 
-  .flashing-sign-1 {
-    position:fixed;
-    left: 1500;
-    top: 50;
-  }
+
+.button:hover {
+  background-color: white;
+  color: #272727;
+  border: 2px solid #ffffff;
+}
+
+.button-container {
+  position: absolute;
+  top: 91%; /* adjust to move up/down */
+  left: 50%; /* adjust to move left/right */
+  transform: translate(-50%, -50%);
+}
+
+.button-container-2 {
+  position: absolute;
+  top: 8%; /* adjust to move up/down */
+  left: 16%; /* adjust to move left/right */
+  transform: translate(-50%, -50%);
+}
+
+.boxing-manual-button {
+  position: fixed;
+  top: 58%; /* adjust to move up/down */
+  left: 73%; /* adjust to move left/right */
+  transform: rotate(7deg); /* rotate image 11 degrees */
+}
+
+.interval-timer-button {
+  position: fixed;
+  top: 9%; /* adjust to move up/down */
+  left: 13.5%; /* adjust to move left/right */
+  transform: rotate(-4deg); /* rotate image -4 degrees */
+}
+
+
+.arcade-button{
+  position: fixed;
+  top: 61%; /* adjust to move up/down */
+  left: 15%; /* adjust to move left/right */
+  transform: rotate(11deg); /* rotate image 11 degrees */
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  background-color: black;
+}
+
+.image-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 90px;
+  height: 100%;
+}
+
+.image-row img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 230px; /* Add some margin to the top */
+}
+
+.image-row img:hover {
+  border: 20px solid white;
+}
