--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,19 @@
   background-position: center;
 }
 
+
+#backgroundScreen5 {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("/Images/ManualBackground.png");
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+}
+
+
 .button {
   background-color: #272727;
   font-family: "LTCBroadway", sans-serif;
@@ -210,21 +223,71 @@ body {
   pointer-events: none;
 }
 
-
- /* timer */
-
 .timer-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   height: 100vh;
 }
 
 #timer {
-  font-size: 50px;
-  color: white;
-  position: absolute;
-  left: 48%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  font-size: 48px;
+  text-align: center;
+  margin-top: 20px;
 }
+
+.manualPage {
+  position: fixed;
+  top: -12%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.manualPage img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.next-page-button {
+    position: fixed;
+    top: 76%; /* adjust to move up/down */
+    left: 85.5%; /* adjust to move left/right */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  /* scale animation */
+  .next-page-button img {
+    animation: scale 2s ease-in-out infinite;
+  }
+  
+  @keyframes scale {
+  0% {
+  transform: scale(1);
+  }
+  50% {
+  transform: scale(1.2);
+  }
+  100% {
+  transform: scale(1);
+  }
+  }
+
+  .back-page-button {
+    position: fixed;
+    top: 76%; /* adjust to move up/down */
+    left: 11.5%; /* adjust to move left/right */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  .manualPageImage {
+    position: fixed;
+    width: 1725px; 
+    height: 895px;
+  }
